tests/fixtures/positive/supply-chain/convention-plugin-applied-to-wrong-target/shared/src/main/kotlin/com/example/shared/JvmOnlyModule.kt
package com.example.shared

class JvmOnlyModule
