tests/fixtures/negative/architecture/package-dependency-cycle/app/src/main/kotlin/com/example/c/C.kt
package com.example.c

class C
